@@ -1,3 +1,8 @@
+2014-02-19  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/60267
+	* gcc.dg/pr60267.c: New test.
+
 2014-02-19  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/59794
